Added a new Class to Static Mesh

--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=96907CB547E7FA702A42A780FB740DBA
+CompanyName=Hambone
+CopyrightNotice=(c)2017
 
 [StartupActions]
 bAddPacks=True
