--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ BuildingEscape/Content/StarterContent/
 ###################
 *VC.db
 *.ipch
+BuildingEscape/.vs/BuildingEscape/v15/Browse.VC.opendb
