another gitignore update

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 */Saved
 BuildingEscape/Content/StarterContent/
 
-###################
-#VS enerated Files#
-###################
+####################
+#VS Generated Files#
+####################
 *VC.db
 *.ipch
 BuildingEscape/.vs/BuildingEscape/v15/Browse.VC.opendb
